K8s_yamls/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mini-project-deployment
  labels:
    app: java
spec:
  replicas: 2
  selector:
    matchlabels:
      labels:
        app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      conatainer:
        - name: java-app
          image: maroof49/test_prod:27
          ports:
          - conatinerPort: 80
