K8s_yamls/service.yml
apiVersion: v1
kind: Service
metadta: 
  name: mini-project-service
spec:
  selector:
    aap: java
  ports:
    - port: 80
      targetPort: 80
